# gui-pose3d_editor

./: CMakeLists.txt  manifest.xml
scripts/: test.rb
src/: CMakeLists.txt  DraggerPoseUpdateQt.hpp  Dummy.cpp  Dummy.hpp  Main.cpp  Pose3dEditor.cpp  Pose3dEditor.hpp  Pose3dEditorPlugin.cpp  Pose3dEditorPlugin.hpp  pose3d_editor.pc.in  vizkit_widget.rb
src/modifiable_scene/: CMakeLists.txt  colorvisitor.hpp  dragger.cpp  dragger.h  graphwidget.cpp  graphwidget.hpp  manipulatable.cpp  manipulatable.h  scene.cpp  scene.h  sceneitem.cpp  sceneitem.h
test/: CMakeLists.txt  plugintest.cpp  test_Dummy.cpp  test_ruby.rb  test_vizkit3d.rb  vizkittest.cpp
test/test_data/: AILA_Head.STL
viz/: .fuse_hidden0000cd05000000f0  .fuse_hidden0000cd05000000f1  .fuse_hidden0000cd05000000f2  .fuse_hidden0000cd05000000f3  .fuse_hidden0000cd05000000f4  CMakeLists.txt  Pose3dEditorVizkit.cpp  Pose3dEditorVizkit.hpp  pose3d_editor-viz.pc.in  vizkit_plugin.rb
